<resources>
    <string name="app_name" translatable="false">Pago</string>
    <string name="inicio">Iniciando...</string>
    <string name="version">Versión 1.0</string>

    <string name="pago">PAGO</string>

    <string name="datos_tarjeta">Seleccione la forma de pago y los datos de su tarjeta</string>
    <string name="email">Correo electrónico</string>
    <string name="total">Total a pagar</string>
    <string name="tarjeta">Número de tarjeta</string>
    <string name="FechaVenc">Fecha de vencimiento</string>
    <string name="mes" translatable="false">MM</string>
    <string name="diagonal" translatable="false">/</string>
    <string name="año" translatable="false">AA</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="name">Nombre del titular</string>
    <string name="pesos" translatable="false">$</string>
    <string name="confirmar">Confirmar</string>

    <string name="email_requerido">Email requerido</string>
    <string name="email_invalido">Ingresa un email válido</string>

    <string name="tarjeta_invalido">Numero de tarjeta inválido</string>
    <string name="tarjeta_requerida">Numero de tarjeta requerido</string>

    <string name="mes_requerido">Mes requerido</string>
    <string name="mes_invalido">Ingresa un mes válido</string>

    <string name="year_requerido">Año requerido</string>
    <string name="year_invalido">Ingresa un año válido</string>

    <string name="cvv_requerido">CVV requerido</string>
    <string name="cvv_invalido">Ingresa un CVV válido</string>

    <string name="nombre_vacio">Por favor completa este campo</string>

    <string name="op_exitosa">Operación Exitosa</string>
    <string name="op_fallida">Operación Fallida</string>

    <string name="text1">El pago realizado con la tarjeta con terminación ***</string>
    <string name="text2"> fue realizado con éxito\n\n Se ha realizado un cargo de $ </string>
    <string name="text3">" "</string>
    <string name="text4">fue rechazado</string>


</resources>