<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="412dp"
        android:layout_height="734dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ivFlecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/atras"
                    app:srcCompat="@drawable/arrow" />

                <TextView
                    android:id="@+id/tvPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/pago"
                    android:textAlignment="center"

                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:padding="5sp"
                android:background="@drawable/grey_background">


                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/dark_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                    app:layout_constraintVertical_bias="0.075" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:padding="10sp"
                android:background="@drawable/grey_background">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.398"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSigno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_weight="1"
                    android:text="@string/pesos"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPrecio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTotal"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvSigno"
                    app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="10sp"
                android:background="@drawable/grey_background">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:text="@string/datos_tarjeta"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvLista"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tvTarjeta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tarjeta"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/etTarjeta"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"


                        android:ems="10"
                        android:hint="@string/tarjeta"
                        android:inputType="number"
                        android:maxLength="16"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvFechaVenc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/FechaVenc"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tvCVV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/cvv"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etMes"
                                android:layout_width="80sp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/mes"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textColorHint="@color/dark_gray" />

                            <TextView
                                android:id="@+id/tvDiagonal"
                                android:layout_width="10sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/diagonal" />

                            <EditText
                                android:id="@+id/etYear"
                                android:layout_width="80sp"
                                android:layout_height="48dp"
                                android:layout_marginEnd="50sp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/año"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textColorHint="@color/dark_gray" />

                            <EditText
                                android:id="@+id/etCVV"
                                android:layout_width="100sp"
                                android:layout_height="48dp"
                                android:ems="10"
                                android:hint="@string/cvv"
                                android:inputType="number"
                                android:maxLength="4"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textColorHint="@color/dark_gray" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/etTitular"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:ems="10"

                        android:hint="@string/name"
                        android:inputType="textMultiLine"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray" />

                    <Button
                        android:id="@+id/btnConfirmar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmar"
                        android:layout_marginHorizontal="100dp"
                        android:onClick="btnClick"/>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>